@@ -1,3 +1,9 @@
+2018-09-26  Martin Jambor  <mjambor@suse.cz>
+
+	PR c/87347
+	* c-parser.c (warn_for_abs): Bail out if TYPE_ARG_TYPES is NULL.  Fix
+        comment.
+
 2018-09-17  David Malcolm  <dmalcolm@redhat.com>
 
 	* c-objc-common.c (range_label_for_type_mismatch::get_text):
